// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button: 0 1`] = `
<button
  className="button"
>
  Button text
</button>
`;

exports[`button: 1 1`] = `
<button
  className="button-2"
>
  Button text foo
</button>
`;
